@@ -1,3 +1,6 @@
+2011-9-4_22:34 Zhao Bolu<zhaobl880704@gmail.com>
+seu3d-1.0.17 
+clear Player TeamPlayer
 2011-9-4_21:30 Zhao Bolu<zhaobl880704@gmail.com>
 seu3d-1.0.16
 clear output
